# strategic-coopetition

./: .gitignore  README.md
TR_validation/TR1_foundations/: LICENSE
TR_validation/TR2_trust/: README.md  TR2_validation_suite.py
coopetition_gym/: LICENSE  README.md  pyproject.toml
coopetition_gym/coopetition_gym/: __init__.py
coopetition_gym/coopetition_gym/core/: __init__.py  collective_action.py  equilibrium.py  interdependence.py  reciprocity.py  trust_dynamics.py  value_functions.py
coopetition_gym/coopetition_gym/envs/: __init__.py  base.py  benchmark_envs.py  case_study_envs.py  dyadic_envs.py  ecosystem_envs.py  extended_envs.py
coopetition_gym/coopetition_gym/envs/wrappers/: __init__.py  aec_wrapper.py  observation_config.py  parallel_wrapper.py
coopetition_gym/coopetition_gym/tests/: __init__.py  test_aec_api.py  test_coopetition_gym.py  test_parallel_api.py
coopetition_gym/coopetition_gym/utils/: __init__.py
coopetition_gym/docs/: contributing.md  evaluation_protocol.md  index.md  installation.md  roadmap.md  troubleshooting.md
coopetition_gym/docs/api/: configuration.md  environments.md  index.md  quick_reference.md  wrappers.md
coopetition_gym/docs/api/core/: equilibrium.md  interdependence.md  trust_dynamics.md  value_functions.md
coopetition_gym/docs/benchmarks/: algorithm_comparison.md  environment_analysis.md  index.md  research_insights.md  trust_dynamics.md
coopetition_gym/docs/environments/: cooperative_negotiation.md  dynamic_partner_selection.md  index.md  partner_holdup.md  platform_ecosystem.md  recovery_race.md  renault_nissan.md  reputation_market.md  slcd.md  synergy_search.md  trust_dilemma.md
coopetition_gym/docs/templates/: environment_specification.md
coopetition_gym/docs/theory/: index.md  interdependence.md  parameters.md  trust_dynamics.md  value_creation.md
coopetition_gym/docs/tutorials/: index.md  quickstart.md
validation/TR1/: README.md  requirements.txt
validation/TR1_foundations/: README.md  TR1_validation_suite.py
validation/TR2/: README.md  TR2_validation_suite.py
validation/TR2_trust/: README.md  requirements.txt
